# templates

./: README.md  flake.nix  template.nix
opam/: .gitignore  changeme.opam  dune-project  flake.nix
opam/src/: dune
reasonml/: .gitignore  changeme.opam  dune  dune-project  flake.nix  package-lock.json  package.json
reasonml/src/: App.re
rescript/: .gitignore  flake.nix  package-lock.json  package.json
